# weekly-report

./: .env.example  .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
src/weekly_monitor/: __init__.py  __main__.py  cli.py  interactive.py
src/weekly_monitor/adapters/: __init__.py  base.py  custom.py  nt.py  skytel.py  unitel.py
src/weekly_monitor/core/: ai_report.py  diff.py  email_sender.py  env.py  http.py  models.py  paths.py  report.py  screenshots.py  storage.py
src/weekly_monitor/data/templates/: weekly_report.html
templates/: weekly_report.html
tests/: test_adapters.py  test_ai_report.py  test_cli.py  test_diff.py  test_email_sender.py  test_env.py  test_interactive.py  test_paths.py  test_report_rendering.py  test_storage.py
tests/fixtures/: nt_listing.html  skytel_listing.html  unitel_api.json
