[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weekly-monitor"
version = "1.0.0"
description = "Weekly website change report scraper"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "python-dateutil>=2.9",
    "pydantic>=2.6",
    "playwright>=1.41",
    "jinja2>=3.1",
    "click>=8.1",
    "tenacity>=8.2",
    "rich>=13.7",
    "Pillow>=10.0",
    "openai>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
weekly-monitor = "weekly_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
weekly_monitor = ["data/templates/*.html", "data/scripts/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
